added skill content

--- a/index.html
+++ b/index.html
@@ -55,6 +55,44 @@
                 </div>
             </div>
         </section>
+        <section class="skill-section">
+                <h3 class="section-title">My-Skills</h3>
+                <div class="skill-container">
+                    <div class="skill">
+                        <img src="images/icons/js.png" alt="">
+                        <p class="skill-title">Vanilla Javascript</p>
+                        <p class="skill-discription">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni facilis dolor, similique asperiores, voluptate laboriosam modi error accusantium, amet numquam animi quae praesentium inventore nostrum illo totam molestiae placeat.</p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/react.png" alt="">
+                        <p class="skill-title">React</p>
+                        <p class="skill-discription">Rem, at odio, ducimus dolore corrupti maxime non culpa in odit ipsam vero error, cupiditate ea dolorem perspiciatis ratione reprehenderit quis? Ea nulla minima quasi incidunt, quidem magnam eos nihil!</p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/nodejs.png" alt="">
+                        <p class="skill-title">NodeJS</p>
+                        <p class="skill-discription">Vitae ab voluptas debitis sequi dolore quos veritatis. Mollitia sapiente sequi eveniet cumque, quam unde itaque quas accusantium sunt ipsum consequatur nostrum exercitationem culpa distinctio consequuntur tenetur modi nobis debitis?</p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/mongo.png" alt="">
+                        <p class="skill-title">MongoDB</p>
+                        <p class="skill-discription">Doloremque laborum eum dolores saepe illum vitae quasi, impedit consectetur quae architecto explicabo blanditiis facere sunt rerum voluptas optio deleniti eaque repudiandae nam nobis ipsam, iure voluptatem. Animi, autem. Fugiat.</p>
+                    </div>
+                </div>
+                    
+        </section>
+        <!-- resume section -->
+        <section class="resume">
+                <h3 class="resume-title">A Summary of My resume</h3>
+                <div class="resume-content">
+                    <div>
+
+                    </div>
+                    <div>
+                        
+                    </div>
+                </div>
+        </section>
 
     </main> 
     <footer>
